add config do teste unitario

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,14 +20,19 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": ["node", "jest", "@testing-library/jest-dom"],
+    "paths": {
+     
+    }
   },
   "include": [
     "src"
-  ],
+, "__test__"  ],
   "references": [
     {
       "path": "./tsconfig.node.json"
     }
   ],
+  
 }
