--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
     "victory": "^36.6.12"
   },
   "devDependencies": {
@@ -47,5 +50,5 @@
   "transform": {
     "\\.[jt]sx?$": "babel-jest",
     "\\.css$": "some-css-transformer"
-    }
+  }
 }
